2010-09-16  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_env/pam_env.c (handle_env): Use setfsuid() return code.
	* modules/pam_mail/pam_mail.c (_do_mail): Likewise.
	* modules/pam_xauth/pam_xauth.c (check_acl, pam_sm_open_session,
	pam_sm_close_session): Likewise.

2010-08-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.1.2

	* configure.in: Bump version number.
	* NEWS: Document changes since 1.1.1.
	* doc/adg/Linux-PAM_ADG.xml: Bump version number.
	* doc/mwg/Linux-PAM_MWG.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Likewise.
	* libpam/Makefile.am: Bump revision of shared library.
	* po/*.po: Regenerate.

2010-08-26  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_nologin/pam_nologin.c (perform_check): Try first
	 /var/run/nologin if the nologin file is not explicitly specified.
	* modules/pam_nologin/pam_nologin.8.xml: Document that /var/run/nologin
	is tried first.

2010-08-26  Sweta Kothari  <swkothar@redhat.com>

	* po/gu.po: Updated translations.

2010-08-26  Geert Warrink  <geert.warrink@onsnet.nu>

	* po/nl.po: Updated translations.

2010-08-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/specs/Makefile.am: Use CC_FOR_BUILD as compiler (cross
	compile support).
	* configure.in: Check for host compiler if cross compiling.
	Bug #2315432, debian#284854#42.

2010-08-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_passwd.c: Implement minlen option.
	* modules/pam_unix/support.c: Likewise.
	* modules/pam_unix/support.h: Likewise.

	* modules/pam_unix/pam_unix_acct.c (pam_sm_acct_mgmt): Adjust
	arguments for _set_ctrl call.
	* modules/pam_unix/pam_unix_auth.c (pam_sm_authenticate): Likewise.
	* modules/pam_unix/pam_unix_session.c: Likewise.

	* modules/pam_unix/pam_unix.8.xml: Document minlen option.
	Based on patch by Steve Langasek.

2010-08-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mail/pam_mail.c: Check for mail only with user
	privilegs.

	* modules/pam_xauth/pam_xauth.c (run_coprocess): Check return